# puzzle

./: .gitignore  CMakeLists.txt
src/: algorithm.cpp  algorithm.hpp  binary_tree.cpp  binary_tree.hpp  config.hpp  main.cpp  pattern.cpp  pattern.hpp  picture.cpp  picture.hpp  puzzle.cpp  puzzle.hpp
